force-app/main/default/objects/ShipmentEvent__e/ShipmentEvent__e.object-meta.xml
<CustomObject>
    <label>Shipment Event</label>
    <pluralLabel>Shipment Events</pluralLabel>
</CustomObject>