force-app/main/default/objects/ShipmentEvent__e/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <label>Event Type</label>
    <type>Text</type>
    <length>32</length>
    <required>true</required>
</CustomField>