force-app/main/default/objects/ShipmentEvent__e/fields/SubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionId__c</fullName>
    <label>Subscription Id</label>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
</CustomField>