force-app/main/default/objects/ShipmentEvent__e/fields/TrackingNumber__c.field-meta.xml
<CustomField>
    <fullName>TrackingNumber__c</fullName>
    <label>Tracking Number</label>
    <type>Text</type>
    <length>64</length>
</CustomField>